# infer

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.ai/: memory.md
.ai/specs/: phase-12-structured-output.md
benchmarks/: bench_generation.py  bench_serving.py  profile_cuda_graph.py  profile_generation.py
benchmarks/log/: GENERATION_LOG.md  SERVING_LOG.md
benchmarks/reports/: Qwen_Qwen3-1.7B_bfloat16_full_kvcache.json  google_gemma-3-1b-it_bfloat16_full_kvcache.json  meta-llama_Llama-3.2-1B-Instruct_bfloat16_full_kvcache.json  serving_Qwen_Qwen3-4B_20260224_055916.json  serving_Qwen_Qwen3-4B_20260224_084503.json  serving_Qwen_Qwen3-4B_20260227_000304.json  serving_Qwen_Qwen3-4B_20260227_000454.json  serving_Qwen_Qwen3-4B_20260227_062245.json  serving_Qwen_Qwen3-4B_20260227_062307.json  serving_Qwen_Qwen3-4B_20260227_062341.json  serving_Qwen_Qwen3-4B_20260227_062437.json  serving_Qwen_Qwen3-4B_20260227_062702.json  serving_Qwen_Qwen3-4B_20260227_201053.json  serving_Qwen_Qwen3-4B_20260227_201619.json  serving_Qwen_Qwen3-4B_20260227_201859.json  serving_google_gemma-3-1b-it_20260224_061108.json  serving_google_gemma-3-1b-it_20260224_085622.json  serving_google_gemma-3-1b-it_20260227_000829.json  serving_google_gemma-3-1b-it_20260227_063358.json  serving_google_gemma-3-1b-it_20260227_202255.json  serving_meta-llama_Llama-3.2-3B-Instruct_20260224_054317.json  serving_meta-llama_Llama-3.2-3B-Instruct_20260224_083641.json  serving_meta-llama_Llama-3.2-3B-Instruct_20260226_235235.json  serving_meta-llama_Llama-3.2-3B-Instruct_20260227_051513.json  serving_meta-llama_Llama-3.2-3B-Instruct_20260227_200909.json  serving_meta-llama_Llama-3.2-3B-Instruct_20260228_223000.json
docs/: OVERALL_DESIGN.md  PHASE_10.md  PHASE_11.md  PHASE_12.md  PHASE_1A.md  PHASE_1B.md  PHASE_2.md  PHASE_3.md  PHASE_3_1.md  PHASE_4.md  PHASE_5.md  PHASE_6.md  PHASE_7.md  PHASE_8.md  PHASE_9.md
scripts/: sanity_check.py
src/infer/: debug.py
tests/integration/: conftest.py  test_api.py  test_end_to_end.py  test_generation.py  test_logits_parity.py  test_single_layer_parity.py  test_speculative_e2e.py  test_structured_json_e2e.py
tests/stress/: test_backpressure.py
tests/unit/: test_block_allocator.py  test_blocks.py  test_cache_pool_protocol.py  test_chat_template.py  test_chunked_prefill.py  test_chunked_prefill_cache_views.py  test_components.py  test_config.py  test_continuous_runner.py  test_continuous_scheduler.py  test_cuda_graph_runner.py  test_debug.py  test_engine.py  test_engine_config.py  test_fp8_linear.py  test_full_models.py  test_generate.py  test_guide.py  test_int8_linear.py  test_json_schema.py  test_kernels.py  test_kv_cache.py  test_logit_mask.py  test_model_loader.py  test_paged_attention_kernel.py  (+19 more)
(+46 files in other folders)
