[project]
name = "infer"
version = "0.1.0"
description = "Educational LLM inference runtime."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "torch>=2.10,<3",
    "transformers>=5.1,<6",
    "safetensors>=0.7",
    "huggingface-hub>=1.4",
    "sentencepiece>=0.2.1",
    "fastapi>=0.129",
    "uvicorn[standard]>=0.40",
    "sse-starlette>=3.2",
    "orjson>=3.11",
    "jinja2>=3.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19",
    "pre-commit>=4.5",
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-cov>=7.0",
    "ruff>=0.15",
    "types-requests>=2.32.4",
]
bench = [
    "httpx>=0.28",
    "tabulate>=0.9",
]
kernels = [
    "triton>=3.6,<4; platform_system == 'Linux'",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/infer"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
warn_unused_configs = true
show_error_codes = true
ignore_missing_imports = true
